feat(logging): integrate SLF4J for logging across analyzer components
Signed-off-by: Leonardo Freitas <lfreitas.lpf@gmail.com>